# mailcraft-backend

./: README.md  main.py  pyproject.toml  render.yaml
app/: config.py  main.py
app/core/: client.py
app/routers/: generate.py  health.py
app/schemas/: email.py
app/services/: email.py
