[project.scripts]
dev = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"
start = "uvicorn main:app --host 0.0.0.0 --port 8000"

[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "google-genai>=2.10.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
]
